# bazel_tools_demo

./: .bazelrc  .eslintignore  .eslintrc.yaml  .flake8  .prettierignore  .prettierrc.yaml  .yamllint.yaml  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  go_repositories.bzl  main.go  package-lock.json  package.json  x.py
.aspect/: README.md
.aspect/bazelrc/: convenience.bazelrc  rust.bazelrc
.github/: dependabot.yml  labels.yaml
.github/workflows/: audit.yaml  ci.yaml
patches/protobuf/: 0026-remove-sprintf.patch  BUILD.bazel  README.md
tools/: bazel_deps.bzl  linters.bzl
tools/bazelutil/: BUILD.bazel  README.md  bazel_run.go  go.mod  workspace_root.go
tools/bazelutil/chdir-workspace/: BUILD.bazel  README.md  go.mod  main.go
tools/black/: BUILD.bazel  defs.bzl  requirements.txt
tools/black/internal/: factory.bzl
tools/buildifier/: defs.bzl
tools/eslint/: BUILD.bazel  constants.bzl  defs.bzl  package-lock.json  package.json
tools/flake8/: BUILD.bazel  defs.bzl  requirements.txt
tools/flake8/internal/: factory.bzl
tools/go-mod-tidy/: BUILD.bazel  README.md  go.mod  main.go
tools/gofmt/: constants.bzl  defs.bzl
tools/gofmt/check/: BUILD.bazel  README.md  go.mod  main.go
tools/gofmt/internal/: factory.bzl
tools/isort/: BUILD.bazel  defs.bzl  requirements.txt
tools/isort/internal/: factory.bzl
tools/minify-html/: BUILD.bazel  README.md
tools/minify-html/crates/: BUILD.aho-corasick-0.7.20.bazel  BUILD.autocfg-1.1.0.bazel  BUILD.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.convert_case-0.4.0.bazel  BUILD.crossbeam-channel-0.5.6.bazel  BUILD.crossbeam-deque-0.8.2.bazel  BUILD.crossbeam-epoch-0.9.13.bazel  BUILD.crossbeam-utils-0.8.14.bazel  BUILD.css-minify-0.3.1.bazel  BUILD.derive_more-0.99.17.bazel  BUILD.either-1.8.0.bazel  BUILD.hashbrown-0.12.3.bazel  BUILD.hermit-abi-0.2.6.bazel  BUILD.indexmap-1.9.2.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.libc-0.2.139.bazel  BUILD.memchr-2.5.0.bazel  BUILD.memoffset-0.7.1.bazel  BUILD.minify-html-0.10.7.bazel  BUILD.minify-js-0.4.2.bazel  BUILD.minimal-lexical-0.2.1.bazel  BUILD.nom-7.1.3.bazel  BUILD.num_cpus-1.15.0.bazel  BUILD.parse-js-0.10.3.bazel  BUILD.proc-macro2-1.0.50.bazel  BUILD.quote-1.0.23.bazel  BUILD.rayon-1.6.1.bazel  BUILD.rayon-core-1.10.1.bazel  BUILD.rustc-hash-1.1.0.bazel  BUILD.rustc_version-0.4.0.bazel  BUILD.scopeguard-1.1.0.bazel  BUILD.semver-1.0.16.bazel  BUILD.syn-1.0.107.bazel  BUILD.unicode-ident-1.0.6.bazel  crates.bzl  defs.bzl
tools/minify-html/src/: main.rs
tools/prettier/: BUILD.bazel  constants.bzl  defs.bzl  package-lock.json  package.json
tools/prettier/internal/: factory.bzl
tools/update-go-deps/: BUILD.bazel  README.md  go.mod  main.go  modules.go
tools/yamllint/: BUILD.bazel  constants.bzl  defs.bzl  requirements.txt
tools/yamllint/internal/: factory.bzl
